plogapp/tests/errors/AttAndRecordConflict2.plog
sorts
#s = {a}.
#s2 = f(#s).
attributes
f: #s -> #s.
statements

